--- a/react-nodejs-wordle-game/package.json
+++ b/react-nodejs-wordle-game/package.json
@@ -14,11 +14,14 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start-win": "SET PORT=4000 && node server.js", 
+    "start": "PORT=4000 node server.js", 
+    "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "proxy": "http://localhost:4000",
   "eslintConfig": {
     "extends": [
       "react-app",
